--- a/WPF_Haltestellen_MVVM_3Tiers/WPF_Haltestellen_MVVM_3Tiers.csproj
+++ b/WPF_Haltestellen_MVVM_3Tiers/WPF_Haltestellen_MVVM_3Tiers.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net7.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
+    <ApplicationIcon>Deutsche_Bahn_AG-Logo.svg.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
