--- a/WPF_Haltestellen_MVVM_3Tiers/WPF_Haltestellen_MVVM_3Tiers.csproj
+++ b/WPF_Haltestellen_MVVM_3Tiers/WPF_Haltestellen_MVVM_3Tiers.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="30.0.1" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1938.49" />
   </ItemGroup>
 
 </Project>
